{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 19,
  "lineage": "64393c8a-2634-df3b-48d2-c868f0a8ab3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e71e47fce92de0c0",
            "arn": "arn:aws:ec2:ap-southeast-1:949862582721:elastic-ip/eipalloc-0e71e47fce92de0c0",
            "domain": "vpc",
            "id": "eipalloc-0e71e47fce92de0c0",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-136-5-87.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.5.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df397591872b169c",
            "arn": "arn:aws:ec2:ap-southeast-1:949862582721:elastic-ip/eipalloc-0df397591872b169c",
            "domain": "vpc",
            "id": "eipalloc-0df397591872b169c",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-76-50-199.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.76.50.199",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:949862582721:internet-gateway/igw-01955d2c5a89865ae",
            "id": "igw-01955d2c5a89865ae",
            "owner_id": "949862582721",
            "tags": {
              "Name": "IGW: for aws vpc"
            },
            "tags_all": {
              "Name": "IGW: for aws vpc"
            },
            "vpc_id": "vpc-0facf2a0e55225548"
          },
          "dependencies": [
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e71e47fce92de0c0",
            "association_id": "eipassoc-08c621dc94c757b1c",
            "connectivity_type": "public",
            "id": "nat-03df20b72e7c91205",
            "network_interface_id": "eni-0cba65db392b200df",
            "private_ip": "10.0.3.162",
            "public_ip": "18.136.5.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f07ced4d22dcc4c",
            "tags": {
              "Name": "private NAT GW: for ru vpc"
            },
            "tags_all": {
              "Name": "private NAT GW: for ru vpc"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.aws_ru_private_subnets",
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df397591872b169c",
            "association_id": "eipassoc-02b6cf79aafa5aee2",
            "connectivity_type": "public",
            "id": "nat-0cd66a167a430ca86",
            "network_interface_id": "eni-02aa361432462c847",
            "private_ip": "10.0.4.251",
            "public_ip": "52.76.50.199",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0676ccc606c5ab405",
            "tags": {
              "Name": "private NAT GW: for ru vpc"
            },
            "tags_all": {
              "Name": "private NAT GW: for ru vpc"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.aws_ru_private_subnets",
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ru_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:949862582721:route-table/rtb-0b6c57b79ff43ccab",
            "id": "rtb-0b6c57b79ff43ccab",
            "owner_id": "949862582721",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03df20b72e7c91205",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT private: for ru vpc"
            },
            "tags_all": {
              "Name": "RT private: for ru vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0facf2a0e55225548"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.aws_ru_private_subnets",
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:949862582721:route-table/rtb-0b637c9acb5ad8db4",
            "id": "rtb-0b637c9acb5ad8db4",
            "owner_id": "949862582721",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cd66a167a430ca86",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT private: for ru vpc"
            },
            "tags_all": {
              "Name": "RT private: for ru vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0facf2a0e55225548"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.aws_ru_private_subnets",
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ru_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:949862582721:route-table/rtb-03ab50cb46d795491",
            "id": "rtb-03ab50cb46d795491",
            "owner_id": "949862582721",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01955d2c5a89865ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT public: for ru vpc"
            },
            "tags_all": {
              "Name": "RT public: for ru vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0facf2a0e55225548"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8241a6ab4936d2f",
            "route_table_id": "rtb-0b6c57b79ff43ccab",
            "subnet_id": "subnet-07f07ced4d22dcc4c"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.ru_private_route_table",
            "aws_subnet.aws_ru_private_subnets",
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056d296016dc918f6",
            "route_table_id": "rtb-0b637c9acb5ad8db4",
            "subnet_id": "subnet-0676ccc606c5ab405"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.ru_private_route_table",
            "aws_subnet.aws_ru_private_subnets",
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eb0508dea31c975",
            "route_table_id": "rtb-03ab50cb46d795491",
            "subnet_id": "subnet-0c6863cb870128316"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.ru_public_route_table",
            "aws_subnet.aws_ru_public_subnets",
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d301b735c70734a3",
            "route_table_id": "rtb-03ab50cb46d795491",
            "subnet_id": "subnet-00f771f5dff6fa4f6"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.ru_public_route_table",
            "aws_subnet.aws_ru_public_subnets",
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc_ru_ap-southeast-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:949862582721:security-group/sg-0cc17c1ead13298c1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc17c1ead13298c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240617181014452900000001",
            "name_prefix": "terraform-",
            "owner_id": "949862582721",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG: vpc-ru--ap-southeast-1"
            },
            "tags_all": {
              "Name": "SG: vpc-ru--ap-southeast-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0facf2a0e55225548"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_ru_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:949862582721:subnet/subnet-07f07ced4d22dcc4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f07ced4d22dcc4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949862582721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private : private subnet 1"
            },
            "tags_all": {
              "Name": "subnet-private : private subnet 1"
            },
            "vpc_id": "vpc-0facf2a0e55225548"
          },
          "dependencies": [
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:949862582721:subnet/subnet-0676ccc606c5ab405",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0676ccc606c5ab405",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949862582721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private : private subnet 2"
            },
            "tags_all": {
              "Name": "subnet-private : private subnet 2"
            },
            "vpc_id": "vpc-0facf2a0e55225548"
          },
          "dependencies": [
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_ru_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:949862582721:subnet/subnet-0c6863cb870128316",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6863cb870128316",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949862582721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public : public subnet 1"
            },
            "tags_all": {
              "Name": "subnet-public : public subnet 1"
            },
            "vpc_id": "vpc-0facf2a0e55225548"
          },
          "dependencies": [
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:949862582721:subnet/subnet-00f771f5dff6fa4f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f771f5dff6fa4f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949862582721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public : public subnet 2"
            },
            "tags_all": {
              "Name": "subnet-public : public subnet 2"
            },
            "vpc_id": "vpc-0facf2a0e55225548"
          },
          "dependencies": [
            "aws_vpc.vpc-ru-ap-southeast-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-ru-ap-southeast-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:949862582721:vpc/vpc-0facf2a0e55225548",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c01e076b807a16ca",
            "default_route_table_id": "rtb-0c22804fd4a0aecfe",
            "default_security_group_id": "sg-0900316b8eaf3bc44",
            "dhcp_options_id": "dopt-af3425c8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0facf2a0e55225548",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c22804fd4a0aecfe",
            "owner_id": "949862582721",
            "tags": {
              "Name": "VPC: ap-southeast-1"
            },
            "tags_all": {
              "Name": "VPC: ap-southeast-1"
            }
          }
        }
      ]
    }
  ]
}